# xai-bookkeeping

./: .env.example  .env.production.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  skills-lock.json  xai-design.html
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: README.md  __init__.py  main.py
backend/app/accounting/: __init__.py
backend/app/ai/: __init__.py
backend/app/api/: __init__.py  router.py
backend/app/api/routes/: __init__.py  audit.py  auth.py  companies.py  company_settings.py  health.py  team.py  workspace_probe.py
backend/app/audit/: __init__.py  service.py
backend/app/core/: config.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/db/models/: __init__.py  audit_event.py  company.py  company_membership.py  role_permission.py  user.py  workspace_probe.py
backend/app/finance/: __init__.py
backend/app/integrations/: __init__.py
backend/app/platform/: __init__.py  auth.py  clerk_organizations.py  company_access.py  health.py  permissions.py  webhooks.py  workspace_probe.py
backend/app/reporting/: __init__.py
backend/app/workflow/: __init__.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_workspace_probe.py  0002_phase2_auth_users.py  0003_phase2_companies.py  0004_phase2_permissions.py  0005_phase2_audit_settings.py
backend/tests/: test_audit_events.py  test_auth.py  test_company_authorization.py  test_company_settings.py  test_health.py  test_role_permissions.py  test_workspace_probe.py
web/: .gitignore  (+11 more)
(+1182 files in other folders)
